# fft_bench

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
fi/: collect_results.py  icelake.sbatch  rome.sbatch  skylake.sbatch
src/: fft_bench.cpp  mkl_bench.cpp
